[tool.poetry]
name = "planarenvs"
version = "1.4.1"
description = "Lightweight open-ai gym environments for planar kinematic chains."
authors = ["Max Spahn <m.spahn@tudelft.nl>"]

[tool.poetry.dependencies]
python = "^3.8,<3.10"
gym = "^0.26.0"
numpy = "^1.19,<1.24"
pyglet = "^1.5.21"
scipy = "^1.5"
forwardkinematics = "^1.0.3"
pylint = "^2.13.3"
mpscenes = "^0"
pygame = "^2.1.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
pylint = "^2.13.3"
black = "^22.3.0"
pytest-cov = "^3.0.0"

[tool.poetry.extras]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
