[tool.poetry]
name = "planarenvs"
version = "1.5.0"
description = "Lightweight open-ai gym environments for planar kinematic chains."
authors = ["Max Spahn <m.spahn@tudelft.nl>"]

[tool.poetry.dependencies]
python = "^3.10"
gym = "^0.26.0"
forwardkinematics = "^1.2.3"
mpscenes = "^0.4.6"
pygame = "^2.6.1"
pyglet = "^2.1.0"
scipy = "^1.15.1"


[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pylint = "^3.3.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
