[project]
name = "planarenvs"
version = "1.6.0"
description = "Default template for PDM package"
authors = [
    {name = "Max Spahn", email = "max.spahn@de.abb.com"},
]
dependencies = ["gymnasium>=1.0.0", "forwardkinematics>=1.2.3", "mpscenes>=0.4.6", "scipy>=1.15.1", "pygame>=2.6.1"]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}



[tool.pdm]
distribution = true

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pylint>=3.3.4",
]
